--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,21 +27,11 @@
       </ul>
     </nav>
   </header>
-<section class ="hero">
-  <div class="hero-content">
-    <h2>Welcome to my Node site</h2>
-    <p>leaning to node.js</p>
 
-  <a href="/" class=" btn btn-lg btn-primary">Get started</a>
-  <a href="/contact" class=" btn btn-lg btn-primary">contact</a>
-  </div>
-</section>
+  page content
 
-<main>
-  <div class="container">
-    <div class="jumbotron text-center">Home page
-    </div>
-  </div>
+<%- defineContent('hero') %>
+
 <footer>
   You have to love this site....   2016
 
