--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <nav class="navbar nav-inverse">
+    <nav class="navbar navbar-inverse">
       <a href="/" class="navbar-brand"> My site </a>
       <ul class="nav navbar-nav">
         <li>
@@ -28,7 +28,7 @@
     </nav>
   </header>
 
-  page content
+
 
 <%- defineContent('hero') %>
 
