upodated about page included data in routes.js for about users

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,10 +27,10 @@
       </ul>
     </nav>
   </header>
-
-
-
 <%- defineContent('hero') %>
+
+<%- defineContent('body') %>
+
 
 <footer>
   You have to love this site....   2016
