updated contact view with form,  form takes data and posts it -- the data is reposted in a view

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -3,7 +3,7 @@
   <%- contentFor('hero') %>
   <section class="hero">
     <div class="hero-content">
-      <h2>All aout us</h2>
+      <h2>All About us</h2>
       <p>We are a growing team</p>
 
 
